css/style.css
/*
Colors used:
Background (Cream): #FFF8F0;
Primary Text (Dark Brown): #2F2E3C;
Link (Dark Green): #33484B;
Link Hover/Active/Etc (Light Green): #586960;
Accent 1 (Lavendar): #B4AEF1;
Accent 2 (Blue): #91c9ff;
*/

@import url('https://fonts.googleapis.com/css2?family=Advent+Pro:ital,wght@0,100..900;1,100..900&family=Akshar:wght@300..700');
@import url('https://fonts.googleapis.com/css2?family=Jura:wght@300..700&family=Kufam:ital,wght@0,400..900;1,400..900&family=Varela+Round&family=Zen+Maru+Gothic&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Electrolize&family=Mate:ital@0;1&family=Teko:wght@300..700&display=swap');

* {
  box-sizing: border-box;
}

body {
  background: #FFF8F0;
  font-family: 'Akshar', sans-serif;
  color: #33484b;
  font-weight: 350;
  font-size: 18px;
  line-height: 1.6;
}

main {
  padding-top: 115px;
  overflow: hidden;
}

footer {
  text-align: center;
  margin-top: 20px;
  border-top: 1px solid #33484B;
}

b, strong {
  font-weight: bold;
}

h1,h2 {
  font-family: 'Electrolize', sans-serif;
}

h1 {
  font-size: 2.2em;
}

h2 {
  font-size: 1.8em;
}

h2, h3, h4 {
  margin: 10px 0;
}

h5 {
  display: inline-block;
  margin: 0;
}

a {
  color: #33484B;
  transition: 300ms ease;
  text-decoration: none;
}

a:hover, a:focus, a:active {
  color: #586960
}

img {
  max-width: 100%;
  border-radius: 5px;
  margin: 0 auto;
}

/** I usually upload larger images bc I find the quality just... looks worse, but I certainly don't want anything *smaller* than the screen to stretch - 
 * so I'm using max width and an auto margin to center anything smaller, rather than stretching everything to 100% **/

ul {
  padding: 0 15px;
  margin: 0;
}

hr {
  margin: 20px 0;
}

header ul, footer ul {
  padding: 0;
  list-style-type: none;
  margin: 10px 0;
}

/******************** Home Page Styling ******************/

main#home {
  padding-top: 0;
}

#hero {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#hero div {
  animation: 1000ms fade-in;
}

@keyframes fade-in {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

#home .menu-icon {
    display: none;
  }

#home nav {
    float: none;
  }

#home nav ul {
  display: flex;
  align-items: center;
  padding: 0;
}

#home nav ul li {
  margin-right: 10px;
}

/******************** Layout Styling ********************/

.container {
  padding: 0 15px;
  margin: 20px auto;
  max-width: 1200px;
}

.subtitle {
  font-size: 90%;
  opacity: 0.8;
}

/** I know it says to use a container for each section, so I have - why 
 * is this better than wrapping the whole main content in one container though? It seems like extra divs for no reason **/

#hero {
  padding: 30px 20px;
  background: #586960;
  color: white;
  min-height: 100vh;
}

#hero h1 {
  margin: 0;
}

#hero p {
  margin: 10px 0;
}

.row {
  margin: 25px 0;
}

.icon-row {
  display: flex;
  align-items: center;
  justify-content: left;
  color: #FFF8F0;
  font-size: 1.6em;
  text-align: left;
}

.icon-row a {
  color: #FFF8F0;
  text-decoration: none;
  height: 80px;
}

.icon-row img {
  margin-right: 20px;
}

.project-container {
  border-bottom: 1px dashed #33484B;
  margin: 0;
  padding: 25px 0;
}

.project-container:last-child {
  border-bottom: none;
}

/** this removes the bottom border from the last project, so it doesn't look weird with the footer's top border 
 * Also, are dashed borders tacky? I think they have a fun vibe but I know it's not really proffessional. Not sure if a solid border or a gradiated
 * div divider would be more appropriate. **/

p.project-description {
  margin: 10px 0;
}

#navigation {
  background: #33484B;
  padding: 20px 20px 10px;
  margin: 0;
  position: fixed;
  box-shadow: 0 2px 5px #131e20;
  width: 100%;
  top: 0;
  text-align: center;
}

#home #navigation {
  position: unset;
  background: none;
  box-shadow: none;
  padding: 0;
}

#navigation a:hover,  #navigation a:focus, #navigation a:active {
  color: #B4AEF1;
}

nav > ul {
  margin-bottom: 0;
}

nav > ul {
  margin: 0;
}

nav > ul > li {
  text-align: left;
}

.navtoggle li:not(:last-child) {
  display: none;
}

.navtoggle li:last-child {
  display: inline;
}

.navtoggle, .navtoggle.responsive {
  position: relative;
}

.navtoggle li .icon {
  position: absolute;
  right: 0;
  top: 2px;
  font-size: 35px;
}

nav > ul > li > a {
  padding: 0 10px;
  color: white;
  text-decoration: none;
  font-family: 'Electrolize', sans-serif;
  font-size: 1.4em;
}

.navtoggle.responsive li  {
  display: block;
}

.navtoggle.responsive nav {
  padding: 24px 0 0;
}

.navtoggle.responsive li  {
  display: block;
  padding: 10px 0;
  border-top: 1px solid #586960;
}

.navtoggle.responsive li:last-child  {
  padding: 0 0 10px;
}

.flex-column {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.icon-row .flex-column div, .icon-row .flex-column a {
  height:  32px;
}

.about picture {
  display: block;
  max-height: 560px;
  overflow: hidden;
  border-radius: 6px;
}

  nav > ul > li {
    display: inline-block;
    text-align: center;
  }

/******************** General ********************/

.button {
  display: inline-block;
  font-weight: 400;
  color: #FFF8F0;
  text-decoration: none;
  padding: 8px 10px 6px;
  margin: 5px 0;
  background: #33484B;
  border: 1px solid #586960;
  border-top: 2px solid #586960;
  border-bottom: 2px solid #131e20;
  border-radius: 5px;
  transition: background 200ms ease, color 200ms ease;
}

.button:hover, .button:focus, .button:active {
  background: #23393c;
  color: #B4AEF1;
  margin: 6px 0 4px;
  border-color: #586960;
}

.button.contact {
  background: none;
  color: #33484B;
  border-width: 2px;
}

.button.contact:hover, .button.contact:focus {
  background: #586960;
  color: #FFF8F0;
  border-color: #33484B;
}

.social-link {
  display: inline-flex;
  margin: 5px;
  width: 55px;
  height: 55px;
  background: #586960;
  border-radius: 100%;
  overflow: hidden;
  justify-content: center;
  align-items: center;
  font-size: 2em;
  text-decoration: none;
  color: #fff8f0;
  font-size: 1.5em;
  transition: 300ms ease;
}

.social-link:hover, .social-link:focus {
  background: #33484b;
  color: #B4AEF1;
}

.socials {
  display: flex;
  justify-content: center;
}

.logo {
  max-width: 100%;
  width:80px;
  border-radius:4px
}

/******************** Typography for each project, and other project-specific styles ********************/

#aquire .accent {
  color:  #df4426;
}

#typography-aquire li {
  line-height: 40px;
  margin: 0;
  display: flex;
  align-items: center;
} 

#typography-aquire h1 {
  font-family: "Kufam", sans-serif;
  font-weight: bold;
  margin: 0;
}

#typography-aquire h2 {
  font-family: "Jura", sans-serif;
  font-weight: 400;
  margin: 0;
}

#typography-aquire h3 {
  font-family: "Varela Round", sans-serif;
  font-weight: 400;
  margin: 0;
}

#typography-aquire {
  font-family: "Zen Maru Gothic", serif;
  font-weight: 300;
}

/*********************** General Project Page **********************/

[class*="mockup-wrapper"] {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 60px;
}

[class*="mockup-wrapper"] picture {
  display: block;
  margin-right: -15%;
  margin-bottom: -18%;
}

.mockup-wrapper-tablet picture {
  margin-right: -10%;
}

.mockup-wrapper-tablet img {
  max-width: 600px;
}

.mockup-wrapper-desktop picture {
  margin-bottom: -40%;
}

#jump-menu {
  position: fixed;
  top: 125px;
  width: 100%;
  padding: 10px 20px;
  background: #fff8f0;
  left: 0;
  box-shadow: 0 2px 5px #131e20;
}

#jump-menu ul {
  list-style: none;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  align-items: center;
}

#jump-menu li {
  display: inline-block;
}

#jump-menu .button {
  padding: 4px 10px 2px;
  min-width: 60px;
  text-align: center;
}

/********************************************* Media Queries ********************************************/

/* Medium devices (640px and larger) */
@media only screen and (min-width: 640px) {

  #hero h1 {
    font-size: 2.8em;
  }

  nav > ul > li > a {
    font-size: 1.8em;
  }

  h2 {
    margin: 10px 0 10px;
  }

  #navigation {
    text-align: unset;
  }

  #hero p {
    line-height: 1.6;
  }

  .row {
    margin: 0;
  }

  .icon-row {
    display: inline-flex;
    justify-content: center;
  }

  nav {
    width: auto;
    float: right;
    margin-top: 4px;
  }

  #home .button {
    padding: 10px 20px 8px;
  }

  nav > ul {
    margin: 1em 0;
  }

  .navtoggle li:not(:last-child) {
    display: inline-block;
  }

  .navtoggle li:last-child {
    display: none;
  }

  main {
    padding-top: 130px;
    overflow: hidden;
  }

  #hero div {
    width: 70%;
    max-width: 800px;
    margin: 0 auto;
  }

  body.project-page main {
    padding-top: 190px;
  }

  .col-md-6 {
    width: 50%;
  }

  .skills-and-tools .col-md-6 {
    margin: 0 0 20px;
    padding-top: 0;
  }

  [class*="col-md"] {
    float: left;
    padding: 10px;
  }

  .row:after {
    content: "";
    clear: both;
    display: table;
  }

  .project-container {
    padding: 40px 0;
  }

  div.project-container:first-of-type {
    padding-top: 20px;
  }

  .about picture {
    float: left;
    width: 50%;
    margin: 0 20px 0 0;
  }

}

/*Large devices (1024px or larger)*/
@media only screen and (min-width: 1024px) {

  #hero h1 {
    font-size: 3em;
  }
  
  .col-lg-3 {
    width: 25%;
  }

  .col-lg-4 {
    width: 33.33%;
  }

  .col-lg-5 {
    width: 41.66%;
  }

  .col-lg-7 {
    width: 58.33%;
  }

  .col-lg-8 {
    width: 66.66%;
  }

  .col-lg-9 {
    width: 75%;
  }

  [class*="col-lg"] {
    float: left;
    padding: 10px;
  }

  .skills-and-tools .col-md-6 {
    float: none;
    width: 100%;
  }


}

/* X-large devices (1440px or larger)*/
@media only screen and (min-width: 1440px) {

}

